--- a/food.html
+++ b/food.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Food </title>
 	<script src="food.js" type="text/javascript" ></script>
-	<script src="ajaxGET.js" type="text/javascript" ></script>
+	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
 <body>
 
@@ -20,7 +20,22 @@
 
 <button type="button" onclick="loadDoc()">Place Order</button>
 
-<p>Fries: 3, Pizza: 2</p>
+
+<h2>Please enter your order as so</h2>
+
+<h3>Fries: 3, Pizza: 2<br>
+or<br>
+Coke: 4<br><br><br>
+You can find our menu below</h3>
+
+
+<p class="menu"></p>
+
+<ul>
+	<li></li>
+</ul>
+
+
 
 </body>
 
