--- a/food.html
+++ b/food.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Food </title>
 	<script src="food.js" type="text/javascript" ></script>
+	<link rel="stylesheet" type="text/css" href="food.css">
 	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
 <body>
@@ -22,10 +23,10 @@
 
 
 <h2>Please enter your order as so</h2>
+<h3>Coke: 4</h3>
+<h2>or as so</h2>
+<h3>Fries: 3, Pizza: 2<br><br>
 
-<h3>Fries: 3, Pizza: 2<br>
-or<br>
-Coke: 4<br><br><br>
 You can find our menu below</h3>
 
 
