--- a/food.html
+++ b/food.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Food </title>
-	<script src="food.js" type="text/javascript" ></script>
-	<link rel="stylesheet" type="text/css" href="food.css">
+	<script src="js/food.js" type="text/javascript" ></script>
+	<link rel="stylesheet" type="text/css" href="style/food.css">
 	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
 <body>
