--- a/food.html
+++ b/food.html
@@ -2,11 +2,26 @@
 <html>
 <head>
 	<title>Food </title>
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+
 	<script src="js/food.js" type="text/javascript" ></script>
 	<link rel="stylesheet" type="text/css" href="style/food.css">
 	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
 <body>
+
+<header class="header">
+	<div class="logo-box">
+		<img src="img/burg.png" alt="logo" class="logo">
+	</div>
+	<div class="text-box">
+		<h1 class="heading-p">
+		<span class="heading-pmain">Good Grub</span>
+		<span class="heading-smain">It's What Gets You Goin'</span>
+	</h1>
+	</div>
+	
+</header>
 
 <!-- <div id="demo">
   <h2>Let AJAX change this text</h2>
