--- a/food.html
+++ b/food.html
@@ -18,6 +18,7 @@
 		<h1 class="heading-p">
 			<span class="heading-pmain">Good Grub</span>
 			<span class="heading-smain">It's What Gets You Goin'</span>
+			<a href="#" class="btn btn-white btn-animate">Our Menu</a>
 		</h1>
 	</div>
 	
