--- a/food.html
+++ b/food.html
@@ -35,6 +35,8 @@
 <h3>What would you like to order?</h3>
 <input type="text" name="">
 
+<!-- id="scriptBox" type="text" onkeypress="return runScript(event)" -->
+
 <button type="button" onclick="loadDoc()">Place Order</button>
 
 
