--- a/food.html
+++ b/food.html
@@ -24,6 +24,23 @@
 	
 </header>
 
+
+<!-- food pics -->
+
+<section class="grid">
+	<div>Bocon Bites<br><img class="food-pic" src="img/bbites.jpg"> </div>
+	<div>Mexican Dogs<br><img class="food-pic" src="img/dogs.jpg"> </div>
+	<div>Chips<br><img class="food-pic" src="img/chips.jpg"> </div>
+	<div>Chicken Fingers<br><img class="food-pic" src="img/chicken.jpg"> </div>
+	<div>Fruit Bowls<br><img class="food-pic" src="img/fbowl.jpg"> </div>
+	<div>Fries<br><img class="food-pic" src="img/fries.jpg"> </div>
+	<div>Pizza<br><img class="food-pic" src="img/pizza.jpg"> </div>
+	<div>Salads<br><img class="food-pic" src="img/salads.jpg"> </div>
+	<div>Shakes<br><img class="food-pic" src="img/shakes.jpg"> </div>
+	
+
+</section>
+
 <!-- <div id="demo">
   <h2>Let AJAX change this text</h2>
   <button type="button" onclick="loadDoc()">Change Content</button>
