--- a/food.html
+++ b/food.html
@@ -4,7 +4,6 @@
 	<title>Food </title>
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-	<script src="js/food.js" type="text/javascript" ></script>
 	<link rel="stylesheet" type="text/css" href="style/food.css">
 	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
@@ -28,15 +27,42 @@
 <!-- food pics -->
 
 <section class="grid">
-	<div>Bocon Bites<br><img class="food-pic" src="img/bbites.jpg"> </div>
-	<div>Mexican Dogs<br><img class="food-pic" src="img/dogs.jpg"> </div>
-	<div>Chips<br><img class="food-pic" src="img/chips.jpg"> </div>
-	<div>Chicken Fingers<br><img class="food-pic" src="img/chicken.jpg"> </div>
-	<div>Fruit Bowls<br><img class="food-pic" src="img/fbowl.jpg"> </div>
-	<div>Fries<br><img class="food-pic" src="img/fries.jpg"> </div>
-	<div>Pizza<br><img class="food-pic" src="img/pizza.jpg"> </div>
-	<div>Salads<br><img class="food-pic" src="img/salads.jpg"> </div>
-	<div>Shakes<br><img class="food-pic" src="img/shakes.jpg"> </div>
+	<div>Bacon Bites<br>
+		<img class="food-pic" src="img/bbites.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Mexican Dogs<br>
+		<img class="food-pic" src="img/dogs.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Chips<br>
+		<img class="food-pic" src="img/chips.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Chicken Fingers<br>
+		<img class="food-pic" src="img/chicken.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Fruit Bowls<br>
+		<img class="food-pic" src="img/fbowl.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Fries<br>
+		<img class="food-pic" src="img/fries.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Pizza<br>
+		<img class="food-pic" src="img/pizza.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Salads<br>
+		<img class="food-pic" src="img/salads.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
+	<div>Shakes<br>
+		<img class="food-pic" src="img/shakes.jpg">
+		<div class="item-info">How Much</div> 
+	</div>
 	
 
 </section>
@@ -72,6 +98,7 @@ You can find our menu below</h3>
 </ul> -->
 
 
+<script src="js/food.js" type="text/javascript" ></script>
 
 </body>
 
