--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Food </title>
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="sass/main.scss">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
 <body>
