--- a/index.html
+++ b/index.html
@@ -23,23 +23,43 @@
 	
 </header>
 
+<main>
+	<section class="section-about">
+		<div class="u-center-text u-margin-bottom-4">
+			<h2 class="heading-secondary">
+			food for your stretchy pants
+			</h2>
+		</div>
+		
+		<div class="row">
+			<div class="col-1-of-2">
+				text
+			</div>
+			<div class="col-1-of-2">
+				image
+			</div>
+		</div>
+
+	</section>
+</main>
+
 
 <!-- Float Grids -->
 
-<section class="grid-test">
+<!-- <section class="grid-test"> -->
 
 	<!-- 1 & 1 -->
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-1-of-2">
 			col 1 of 2
 		</div>
 		<div class="col-1-of-2">
 			col 1 of 2
 		</div>
-	</div>
+	</div> -->
 
 	<!-- 1 & 1 & 1 -->
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-1-of-3">
 			col 1 of 3
 		</div>
@@ -49,20 +69,20 @@
 		<div class="col-1-of-3">
 			col 1 of 3
 		</div>
-	</div>
+	</div> -->
 
 	<!-- 1 & 2 -->
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-1-of-3">
 			col 1 of 3
 		</div>
 		<div class="col-2-of-3">
 			col 2 of 3
 		</div>
-	</div>
+	</div> -->
 
 	<!-- 1 & 1 & 1 & 1 -->
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-1-of-4">
 			col 1 of 4
 		</div>
@@ -75,10 +95,10 @@
 		<div class="col-1-of-4">
 			col 1 of 4
 		</div>
-	</div>
+	</div> -->
     
     <!-- 1 & 1 & 2 -->
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-1-of-4">
 			col 1 of 4
 		</div>
@@ -89,10 +109,10 @@
 			col 2 of 4
 		</div>
 	</div>
-
+ -->
 
 	<!-- 1 & 3 -->
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-1-of-4">
 			col 1 of 4
 		</div>
@@ -103,7 +123,7 @@
 
 
 </section>
-
+ -->
 
 <!-- food pics -->
 
