--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <main>
 	<section class="section-about">
-		<div class="u-center-text u-margin-bottom-4">
+		<div class="u-center-text u-margin-bottom-big">
 			<h2 class="heading-secondary">
 			food for your stretchy pants
 			</h2>
@@ -33,7 +33,21 @@
 		
 		<div class="row">
 			<div class="col-1-of-2">
-				text
+				<h1 class="heading-third u-margin-bottom-small">
+					The Best Food in the City Right to Your Door!
+				</h1>
+				<p class="paragraph">
+					Late night munchies got you down? Don't fret Good Grub has got you covered. Whith an app that makes ordering and paying a cinch, we'll get yur order ready in a jiff and have it to you whenever you need it. 
+				</p>
+
+				<h1 class="heading-third u-margin-bottom-small">
+					Casual Dining That'll Make you Want to Relax, Eat and Drink All Night.
+				</h1>
+				<p class="paragraph">
+					Bacon ipsum dolor amet picanha cupim beef chicken tri-tip, porchetta landjaeger buffalo corned beef. Ham hock jowl sausage, prosciutto frankfurter beef flank short ribs drumstick brisket pork belly cow cupim strip steak. Doner alcatra meatball ground round pork loin pork chop boudin short loin prosciutto beef ribs. Meatloaf doner spare ribs bresaola. 
+				</p>
+
+				<a href="#" class="btn-text">Learn More &rarr;</a>
 			</div>
 			<div class="col-1-of-2">
 				image
