--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
 					Casual Dining That'll Make you Want to Relax, Eat and Drink All Night.
 				</h1>
 				<p class="paragraph">
-					Bacon ipsum dolor amet picanha cupim beef chicken tri-tip, porchetta landjaeger buffalo corned beef. Ham hock jowl sausage, prosciutto frankfurter beef flank short ribs drumstick brisket pork belly cow cupim strip steak. Doner alcatra meatball ground round pork loin pork chop boudin short loin prosciutto beef ribs. Meatloaf doner spare ribs bresaola. 
+					Bacon ipsum dolor amet picanha cupim beef chicken tri-tip, porchetta landjaeger buffalo corned beef. Ham hock jowl sausage, prosciutto frankfurter beef flank short ribs drumstick brisket pork belly cow cupim strip steak. 
 				</p>
 
 				<a href="#" class="btn-text">Learn More &rarr;</a>
 			</div>
 			<div class="col-1-of-2">
-				image
+				<div class="composition">
+					<img src="img/fries.jpg" alt="Photo 1" class="composition_photo composition_photo--p1">
+					<img src="img/bbites.jpg" alt="Photo 2" class="composition_photo composition_photo--p2">
+					<img src="img/dogs.jpg" alt="Photo 3" class="composition_photo composition_photo--p3">
+				</div>
 			</div>
 		</div>
 
