--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <!-- food pics -->
 
-<section class="grid">
+<!-- <section class="grid">
 	<div>Bacon Bites<br>
 		<img class="food-pic" src="img/bbites.jpg">
 		<div class="item-info">How Much</div> 
@@ -237,7 +237,7 @@
 	</div>
 	
 
-</section>
+</section> -->
 
 <!-- <div id="demo">
   <h2>Let AJAX change this text</h2>
@@ -245,14 +245,14 @@
 </div> -->
 
 	<!-- <button class= "choices">Check Out Our Menu</button> -->
-<h1>Place your order here</h1>
+<!-- <h1>Place your order here</h1>
 
 <h3>What would you like to order?</h3>
-<input type="text" name="">
+<input type="text" name=""> -->
 
 <!-- id="scriptBox" type="text" onkeypress="return runScript(event)" -->
 
-<button type="button" onclick="loadDoc()">Place Order</button>
+<!-- <button type="button" onclick="loadDoc()">Place Order</button>
 
 
 <h2>Please enter your order as so</h2>
@@ -263,7 +263,7 @@
 You can find our menu below</h3>
 
 
-<p class="menu"></p>
+<p class="menu"></p> -->
 
 <!-- <ul>
 	<li></li>
