--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="col-1-of-4">
 				<div class="feature-box">
 					<i class="feature-box__icon fas fa-hotdog"></i>
-					<h3 class="heading-third u-margin-bottom-small">Dazzling Dogs</h3>
+					<h3 class="heading-third u-margin-bottom-small">Dogs made to order</h3>
 					<p class="feature-box__text">
 						Bacon ipsum dolor amet picanha cupim beef chicken tri-tip, porchetta landjaeger buffalo corned beef. Ham hock jowl sausage, prosciutto frankfurter beef.
 					</p>
