--- a/index.html
+++ b/index.html
@@ -110,8 +110,28 @@
 			</div>
 
 		</div>
+	</section>
+
+	<section class="section-dishes">
+		<div class="u-center-text u-margin-bottom-big">
+			<h2 class="heading-secondary">
+			most popular dishes
+			</h2>
+		</div>
+		<div class="row">
+			<div class="col-1-of-3">
+				col 1 of 3
+			</div>
+			<div class="col-1-of-3">
+				col 1 of 3
+			</div>
+			<div class="col-1-of-3">
+				col 1 of 3
+			</div>
+		</div>
 
 	</section>
+
 </main>
 
 
