--- a/index.html
+++ b/index.html
@@ -120,7 +120,36 @@
 		</div>
 		<div class="row">
 			<div class="col-1-of-3">
-				col 1 of 3
+				<div class="card">
+					<div class="card__side card__side--front card__side--front-1">
+						<div class="card__picture card__picture--1">
+							<!-- &nbsp; -->
+						</div>
+						<h4 class="card__heading">
+							<span class="card__heading-span card__heading-span-1">
+								Mouthwatering Salads
+							</span>
+						</h4>
+						<div class="card__details">
+							<ul>
+								<li>Freshest ingredients</li>
+								<li>The toppings you want</li>
+								<li>All Dressings made in house</li>
+								<li>Organic & locally sourced</li>
+								<li>Prepared fresh to order</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card__side card__side--back card__side--back-1">
+						<div class="card__cta">
+							<div class="card__price-box">
+								<p class="card__price-only">Starting at</p>
+								<p class="card__price-value">$8.00</p>
+							</div>
+							<a href="#" class="btn btn-white">Order</a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="col-1-of-3">
 				col 1 of 3
