--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 						</div>
 						<h4 class="card__heading">
 							<span class="card__heading-span card__heading-span-1">
-								Mouthwatering Salads
+								Amazing Salads
 							</span>
 						</h4>
 						<div class="card__details">
 							<ul>
 								<li>Freshest ingredients</li>
 								<li>The toppings you want</li>
-								<li>All Dressings made in house</li>
+								<li>Dressings made in house</li>
 								<li>Organic & locally sourced</li>
 								<li>Prepared fresh to order</li>
 							</ul>
@@ -152,10 +152,68 @@
 				</div>
 			</div>
 			<div class="col-1-of-3">
-				col 1 of 3
+				<div class="card">
+					<div class="card__side card__side--front card__side--front-2">
+						<div class="card__picture card__picture--2">
+							<!-- &nbsp; -->
+						</div>
+						<h4 class="card__heading">
+							<span class="card__heading-span card__heading-span-2">
+								Delicious Shakes
+							</span>
+						</h4>
+						<div class="card__details">
+							<ul>
+								<li>Selection of fresh fruits</li>
+								<li>Blended to perfection</li>
+								<li>Options for an extra kick</li>
+								<li>Prepared fresh</li>
+								<li>Low-cal options</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card__side card__side--back card__side--back-2">
+						<div class="card__cta">
+							<div class="card__price-box">
+								<p class="card__price-only">Starting at</p>
+								<p class="card__price-value">$5.00</p>
+							</div>
+							<a href="#" class="btn btn-white">Order</a>
+						</div>
+					</div>
+				</div>	
 			</div>
 			<div class="col-1-of-3">
-				col 1 of 3
+				<div class="card">
+					<div class="card__side card__side--front card__side--front-3">
+						<div class="card__picture card__picture--3">
+							<!-- &nbsp; -->
+						</div>
+						<h4 class="card__heading">
+							<span class="card__heading-span card__heading-span-3">
+								Fabulous Pizzas
+							</span>
+						</h4>
+						<div class="card__details">
+							<ul>
+								<li>Freshest toppings</li>
+								<li>Heart-healthy choices</li>
+								<li>Dough made daily in house</li>
+								<li>Variety of sauces to try</li>
+								<li>Specialty crusts</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card__side card__side--back card__side--back-3">
+						<div class="card__cta">
+							<div class="card__price-box">
+								<p class="card__price-only">Starting at</p>
+								<p class="card__price-value">$10.00</p>
+							</div>
+							<a href="#" class="btn btn-white">Order</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
