--- a/index.html
+++ b/index.html
@@ -217,8 +217,11 @@
 			</div>
 		</div>
 
-	</section>
+		<div class="u-center-text u-margin-top-big">
+			<a href="#" class="btn btn-red">Full Menu</a>
+		</div>
 
+	</section>
 </main>
 
 
