--- a/index.html
+++ b/index.html
@@ -220,6 +220,64 @@
 		<div class="u-center-text u-margin-top-big">
 			<a href="#" class="btn btn-red">Full Menu</a>
 		</div>
+	</section>
+
+	<section class="section-stories">
+		<div class="bg-video">
+			<video class="bg-video__content" autoplay muted loop>
+				<source src="img/Date.mp4" type="video/mp4">
+				<source src="img/Date.webm" type="video/webm">
+				Your browser is not supported			
+			</video>
+		</div>
+		<div class="u-center-text u-margin-bottom-big">
+			<h2 class="heading-secondary">
+				People really like our food!
+			</h2>
+		</div>
+
+		<div class="row">
+			<div class="story">
+				<figure class="story__shape">
+					<img src="img/brazil1.jpeg" alt="Group having food" class="story__image">
+					<figcaption class="story__caption">
+						Jim Tate
+					</figcaption>
+				</figure>
+				<div class="story__texts">
+					<h3 class="heading-tertiary u-margin-button-small">
+						A most amazing restaurant experience.
+					</h3>
+					<p>
+						Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato.
+						 Dandelion cucumber earthnut pea peanut soko zucchini.	
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="story">
+				<figure class="story__shape">
+					<img src="img/027.jpeg" alt="Group having food" class="story__image">
+					<figcaption class="story__caption">
+						Thais Feevah
+					</figcaption>
+				</figure>
+				<div class="story__texts">
+					<h3 class="heading-tertiary u-margin-button-small">
+						Such good food and great people.
+					</h3>
+					<p>
+						Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato.
+						 Dandelion cucumber earthnut pea peanut soko zucchini.	
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="u-center-text u-margin-top-big">
+			<a href="#" class="btn-text">Read More &rarr;</a>
+		</div>
 
 	</section>
 </main>
