--- a/index.html
+++ b/index.html
@@ -280,6 +280,46 @@
 		</div>
 
 	</section>
+
+	<section class="section-reserve">
+		<div class="row">
+			<div class="reserve">
+				<div class="reserve__form">
+					<form action="#" class="form">
+						<div class="u-margin-bottom-medium">
+							<h2 class="heading-secondary">
+								Reserve your table now
+							</h2>
+						</div>
+						<div class="form__group">
+							<input type="text" class="form__input" placeholder="Full Name" id="name" required>
+							<label for="name" class="form__label">Full Name</label>
+						</div>
+						<div class="form__group">
+							<input type="email" class="form__input" placeholder="Email Address" id="email" required>
+							<label for="email" class="form__label">Email Address</label>
+						</div>
+						<div class="form__group">
+							<input type="number" class="form__input" placeholder="People in your Party" id="guests" required>
+							<label for="number" class="form__label">Number of guests</label>
+						</div>
+
+						<!-- <div class="form__group">
+							<div class="form__radio-group">
+								<input type="radio" class="form__radio-input" id="small" name="group_size">
+								<label for="small" class="form__radio-label">Small Group (Less than 5)</label>
+							</div>
+
+							<div class="form__radio-group">
+								<input type="radio" class="form__radio-input" id="large" name="group_size">
+								<label for="large" class="form__radio-label">Large Group (More than 5)</label>
+							</div>
+						</div> -->
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 </main>
 
 
