--- a/index.html
+++ b/index.html
@@ -304,17 +304,23 @@
 							<label for="number" class="form__label">Number of guests</label>
 						</div>
 
-						<!-- <div class="form__group">
+						<div class="form__group">
 							<div class="form__radio-group">
 								<input type="radio" class="form__radio-input" id="small" name="group_size">
-								<label for="small" class="form__radio-label">Small Group (Less than 5)</label>
+								<label for="small" class="form__radio-label">
+									<span class="form__radio-button"></span>
+									Small Group (Less than 5)
+								</label>
 							</div>
 
 							<div class="form__radio-group">
 								<input type="radio" class="form__radio-input" id="large" name="group_size">
-								<label for="large" class="form__radio-label">Large Group (More than 5)</label>
+								<label for="large" class="form__radio-label">
+									<span class="form__radio-button"></span>
+									Large Group (More than 5)
+								</label>
 							</div>
-						</div> -->
+						</div>
 					</form>
 				</div>
 			</div>
