--- a/index.html
+++ b/index.html
@@ -300,13 +300,14 @@
 							<label for="email" class="form__label">Email Address</label>
 						</div>
 						
+						<h2 class="form__party u-margin-bottom-medium">How many in your party?</h2>
 
 						<div class="form__group u-margin-bottom-medium">
 							<div class="form__radio-group">
 								<input type="radio" class="form__radio-input" id="small" name="group_size">
 								<label for="small" class="form__radio-label">
 									<span class="form__radio-button"></span>
-									Table for 6 or less
+									5 or less
 								</label>
 							</div>
 
@@ -314,7 +315,7 @@
 								<input type="radio" class="form__radio-input" id="large" name="group_size">
 								<label for="large" class="form__radio-label">
 									<span class="form__radio-button"></span>
-									Table for 6 or more
+									6 or more
 								</label>
 							</div>
 						</div>
