--- a/index.html
+++ b/index.html
@@ -336,6 +336,29 @@
 	</section>
 </main>
 
+<footer class="footer">
+	<div class="row">
+		<div class="col-1-of-3">
+			<div class="footer__navigation">
+				<ul class="footer__list">
+					<li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+					<li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+					<li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+					<li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+					<li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-1-of-3">
+			<img src="img/burg.png" alt="Full Logo" class="footer__logo">
+		</div>
+		<div class="col-1-of-3">
+			<p class="footer__copyright">
+				Built by <a href="http://defeveloper.com" class="footer__link">Chris</a>. This is a web page developed using only CSS and SCSS. Thanks to <a href="https://codingheroes.io" class="footer__link">Jonas Schmedtmann</a> for helping me throught the design of this page!
+			</p>
+		</div>
+	</div>
+</footer>
 
 <!-- Float Grids -->
 
