--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 		</div>
 		<div class="col-1-of-3">
 			<p class="footer__copyright">
-				Built by <a href="http://defeveloper.com" class="footer__link">Chris</a>. This is a web page developed using only CSS and SCSS. Thanks to <a href="https://codingheroes.io" class="footer__link">Jonas Schmedtmann</a> for helping me throught the design of this page!
+				Built by <a href="http://defeveloper.com" class="footer__link">Defeveloper</a>. This is a web page developed using only CSS and SCSS. Thanks to <a href="https://codingheroes.io" class="footer__link">Jonas Schmedtmann</a> for helping me throught the design of this page!
 			</p>
 		</div>
 	</div>
