--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 <body>
 
+	<div class="navigation">
+		<input type="checkbox" class="navigation_checkbox" id="navi-toggle">
+		<label for="navi-toggle" class="navigation_button"></label>
+		<div class="navigation_background">
+			<span class="navigation_icon">
+
+			</span>
+		</div>
+
+		<nav class="navigation_nav">
+			<ul class="navigation_list">
+				<li class="navigation_item"><a href="#" class="navigation_link"><span>1</span>Home</a></li>
+				<li class="navigation_item"><a href="#" class="navigation_link"><span>2</span>Overview</a></li>
+				<li class="navigation_item"><a href="#" class="navigation_link"><span>3</span>Bites to eat</a></li>
+				<li class="navigation_item"><a href="#" class="navigation_link"><span>4</span>What customers think</a></li>
+				<li class="navigation_item"><a href="#" class="navigation_link"><span>5</span>Reserve a table</a></li>
+			</ul>
+		</nav>
+
+	</div>
+
 <header class="header">
 	<div class="logo-box">
 		<img src="img/burg.png" alt="logo" class="logo">
