--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 	<div class="navigation">
 		<input type="checkbox" class="navigation_checkbox" id="navi-toggle">
-		<label for="navi-toggle" class="navigation_button"></label>
-		<div class="navigation_background">
-			<span class="navigation_icon">
+		<label for="navi-toggle" class="navigation_button">
+			<span class="navigation_icon">&nbsp;</span>
+		</label>
 
-			</span>
+		<div class="navigation_background">
+			
 		</div>
 
 		<nav class="navigation_nav">
