--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ You can find our menu below</h3>
 </ul> -->
 
 
-<script src="js/food.js" type="text/javascript" ></script>
+<!-- <script src="js/food.js" type="text/javascript" ></script> -->
 
 </body>
 
