--- a/index.html
+++ b/index.html
@@ -359,8 +359,11 @@
 </main>
 
 <footer class="footer">
+	<div class="footer__logo-box">
+		<img src="img/burg.png" alt="Full Logo" class="footer__logo">
+	</div>
 	<div class="row">
-		<div class="col-1-of-3">
+		<div class="col-1-of-2">
 			<div class="footer__navigation">
 				<ul class="footer__list">
 					<li class="footer__item"><a href="#" class="footer__link">Company</a></li>
@@ -371,10 +374,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-1-of-3">
-			<img src="img/burg.png" alt="Full Logo" class="footer__logo">
-		</div>
-		<div class="col-1-of-3">
+		<div class="col-1-of-2">
 			<p class="footer__copyright">
 				Built by <a href="http://defeveloper.com" class="footer__link">Defeveloper</a>. This is a web page developed using only CSS and SCSS. Thanks to <a href="https://codingheroes.io" class="footer__link">Jonas Schmedtmann</a> for helping me through the design of this page!
 			</p>
