--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Food </title>
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/22c5866bc2.js" crossorigin="anonymous"></script>
-
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- <script src="ajaxGET.js" type="text/javascript" ></script> -->
 </head>
